# bitcoin-waila

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml  rust.yml
src/: bip21.rs  lib.rs
waila/: Cargo.toml  README.md
waila-wasm/: Cargo.toml  LICENSE  README.md
waila-wasm/src/: lib.rs
waila/src/: bip21.rs  lib.rs  nwa.rs
