[package]
name = "bitcoin-waila"
version = "0.1.0"
edition = "2021"
authors = ["Ben Carman <benthecarman@live.com>", "Paul Miller <paul@pauljmiller.com>"]
license = "MIT"
homepage = "https://github.com/MutinyWallet/bitcoin-waila/"
repository = "https://github.com/MutinyWallet/bitcoin-waila/"
readme = "README.md"
documentation = "https://docs.rs/bitcoin-waila/"
description = "\"What am I looking at?\" A tool for decoding bitcoin-related strings."
keywords = [ "lightning", "bitcoin" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bech32 = "0.9.1"
bitcoin = { version = "0.29.2", no-default-features = true }
bip21 = "0.2.0"
lnurl-rs = { version = "0.1.3", no-default-features = true }
lightning-invoice = { version = "0.22.0", no-default-features = true }
lightning = { version = "0.0.114", no-default-features = true }

[dev-dependencies]
bitcoin = { version = "0.29.2", features = ["std"] }
lightning = { version = "0.0.114", features = ["std"] }
lightning-invoice = { version = "0.22.0", features = ["std"] }
