[package]
name = "bitcoin-waila"
version = "0.1.1"
edition = "2018"
authors = ["Ben Carman <benthecarman@live.com>", "Paul Miller <paul@pauljmiller.com>"]
license = "MIT"
homepage = "https://github.com/MutinyWallet/bitcoin-waila/"
repository = "https://github.com/MutinyWallet/bitcoin-waila/"
readme = "README.md"
documentation = "https://docs.rs/bitcoin-waila/"
description = "\"What am I looking at?\" A tool for decoding bitcoin-related strings."
keywords = [ "lightning", "bitcoin" ]

[dependencies]
bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
bip21 = "0.2.0"
lnurl-rs = { version = "0.2.1", default-features = false }
lightning-invoice = { version = "0.22.0", default-features = false }
lightning = { version = "0.0.114", default-features = false }

[features]
default = ["std"]
std = ["bitcoin/std", "lightning-invoice/std", "lightning/std"]
no-std = ["bitcoin/no-std", "lightning-invoice/no-std", "lightning/no-std"]

[dev-dependencies]
bitcoin = { version = "0.29.2", features = ["std"] }
lightning = { version = "0.0.114", features = ["std"] }
lightning-invoice = { version = "0.22.0", features = ["std"] }
