[package]
name = "bitcoin-waila"
version = "0.3.0"
edition = "2018"
authors = ["Ben Carman <benthecarman@live.com>", "Paul Miller <paul@pauljmiller.com>"]
license = "MIT"
homepage = "https://github.com/MutinyWallet/bitcoin-waila/"
repository = "https://github.com/MutinyWallet/bitcoin-waila/"
readme = "README.md"
documentation = "https://docs.rs/bitcoin-waila/"
description = "\"What am I looking at?\" A tool for decoding bitcoin-related strings."
keywords = ["lightning", "bitcoin", "bip21", "lnurl"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bech32 = "0.9.1"
bitcoin = { version = "0.30.2", default-features = false, features = ["serde"] }
bip21 = "0.3.1"
elements = { version = "0.23.0", optional = true }
itertools = "0.12.0"
nostr = { version = "0.27.0", default-features = false, features = ["nip47"] }
lnurl-rs = { version = "0.4.0", default-features = false }
lightning-invoice = { version = "0.29.0", default-features = false }
lightning = { version = "0.0.121", default-features = false }
rgb-std = { version = "0.10.9", optional = true }
rgb-wallet = { version = "0.10.9", optional = true }
url = "2.4.1"
moksha-core = "0.1.2"

[features]
default = ["std"]
std = ["bitcoin/std", "lightning-invoice/std", "lightning/std", "nostr/std"]
no-std = ["bitcoin/no-std", "lightning-invoice/no-std", "lightning/no-std", "nostr/alloc"]
rgb = ["rgb-std", "rgb-wallet"]
liquid = ["dep:elements"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
